capacityplanner/force-app/main/default/objects/Team_Member__c/fields/Community_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>Community User ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>