capacityplanner/force-app/main/default/objects/Team_Member__c/fields/Daily_Capacity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Daily_Capacity_Hours__c</fullName>
    <defaultValue>7.5</defaultValue>
    <label>Daily Capacity Hours</label>
    <precision>3</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>