capacityplanner/force-app/main/default/objects/Team_Member__c/fields/Story_Points_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Story_Points_Per_Hour__c</fullName>
    <defaultValue>0.125</defaultValue>
    <label>Story Points Per Hour</label>
    <precision>4</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>